--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -54,6 +54,10 @@ on init
     wait /dev/block/platform/soc/${ro.boot.bootdevice}
     symlink /dev/block/platform/soc/${ro.boot.bootdevice} /dev/block/bootdevice
 
+    # ZRAM setup
+    write /sys/block/zram0/comp_algorithm lz4
+    write /proc/sys/vm/page-cluster 0
+
 on early-fs
     start vold
 
