sweet: configs: wifi: Disable RX wakelock feature
Change-Id: I3e093c8fd16b231d531751056648bd6b745e5171

--- a/configs/wifi/WCNSS_qcom_cfg.ini
+++ b/configs/wifi/WCNSS_qcom_cfg.ini
@@ -609,6 +609,9 @@ bad_bssid_counter_thresh=7
 # 1 - enable (Skip DFS Channel)
 gSkipDfsChannelInP2pSearch=0
 
+# Disable rx wakelock
+rx_wakelock_timeout=0
+
 END
 
 # Note: Configuration parser would not read anything past the END marker
