--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -57,6 +57,7 @@ on init
     # ZRAM setup
     write /sys/block/zram0/comp_algorithm lz4
     write /proc/sys/vm/page-cluster 0
+    write /proc/sys/vm/swappiness 100
 
 on early-fs
     start vold
