--- a/parts/AndroidManifest.xml
+++ b/parts/AndroidManifest.xml
@@ -54,9 +54,11 @@
             android:theme="@style/Theme.SubSettingsBase"
             android:exported="true">
             <intent-filter>
-                <action android:name="org.lineageos.settings.device.DOZE_SETTINGS" />
-                <category android:name="android.intent.category.DEFAULT" />
+                <action android:name="com.android.settings.action.IA_SETTINGS" />
             </intent-filter>
+            <meta-data
+                android:name="com.android.settings.category"
+                android:value="com.android.settings.category.ia.display" />
         </activity>
 
         <activity
