--- a/rootdir/etc/init.sweet.rc
+++ b/rootdir/etc/init.sweet.rc
@@ -26,41 +26,13 @@
 #
 
 # this will make sure you have /data ready and then you try to create the dir.
-on init
-    chown system camera /dev/drv8846_dev
-    chown system camera /dev/akm09970
-    chmod 0660 /dev/drv8846_dev
-    chmod 0660 /dev/akm09970
-
 on boot
-    write /dev/cpuset/top-app/cpus 0-7
-    write /dev/cpuset/top-app/boost/cpus 4-7
-    write /dev/cpuset/foreground/cpus 0-6
-    write /dev/cpuset/foreground/boost/cpus 0-6
-    write /dev/cpuset/background/cpus 0-1
-    write /dev/cpuset/system-background/cpus 0-3
-
-    #Set the default voltage to 5v
+    # Set the default voltage to 5v
     setprop persist.vendor.cp.taper_term_mv 5000
 
-    setprop persist.vendor.qg_cold_temp -150
-    setprop persist.vendor.qg_coff_gain 1
-    setprop persist.vendor.qg_cld_coff_gain 1.5
-
-service vendor.motor /vendor/bin/hw/vendor.xiaomi.hardware.motor@1.0-service
-    class hal
-    user system
-    group system
-
-on boot
-    chown system system /sys/class/leds/green/step_ms
-    chown system system /sys/class/leds/green/pause_lo_count
-    chown system system /sys/class/leds/green/lut_pattern
-    chown system system /sys/class/leds/green/lo_idx
-    chown system system /sys/class/leds/blue/step_ms
-    chown system system /sys/class/leds/blue/pause_lo_count
-    chown system system /sys/class/leds/blue/lut_pattern
-    chown system system /sys/class/leds/blue/lo_idx
+    # setprop persist.vendor.qg.cold_temp -150
+    # setprop persist.vendor.qg.coff_gain 1
+    # setprop persist.vendor.qg.cld_coff_gain 1.5
 
 service vendor.nfc_hal_service /vendor/bin/hw/android.hardware.nfc@1.2-service
     override
